# Mark-it

./: NewPdfPrinter.py  New_Parser.py  Parser.py  Pdf_printer.py  Prova.mi  README.md  Style.json  markit.py  pygments_highlighter.py  pyproject.toml  requirements.txt
config/: Style.json
markit/: NewPdfPrinter.py  New_Parser.py  markit.py
