[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markit"
version = "0.1.0"
description = "MarkIT - markdown-like tool to PDF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
markit = "markit.markit:main"

[tool.setuptools]
packages = ["markit"]

[tool.setuptools.package-data]
markit = ["config/**/*"]
