[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markit"
version = "0.1.0"
description = "Mark-it CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["markit"]

[tool.setuptools.package-data]
markit = ["config/*.json"]

[project.scripts]
markit = "markit.markit:main"
